Added JavaDoc, small fixes